# walrus

./: Cargo.toml  README.md  rustfmt.toml
crates/walrus-cli/: Cargo.toml
crates/walrus-cli/src/: main.rs
crates/walrus-core/: Cargo.toml
crates/walrus-core/src/: commands.rs  ipc.rs  lib.rs  utils.rs  wayland.rs
crates/walrus-core/src/config/: core.rs  mod.rs
crates/walrus-daemon/: Cargo.toml
crates/walrus-daemon/src/: daemon.rs  main.rs  transition.rs
src/: commands.rs  config.rs  daemon.rs  error.rs  handler.rs  ipc.rs  lib.rs  main.rs  paths.rs  transition.rs  utils.rs  wayland.rs
src/commands/: favorite.rs  next.rs
src/config/: core.rs  defaults.rs  impls.rs  mod.rs  types.rs
tests/: config.rs  daemon.rs
