[package]
name = "walrus"
version = "0.1.2"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1" }
clap = { version = "4.5.13", features = ["derive", "env"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs"] }
notify = "7.0.0"
rand = "0.9.0"
serde = { version = "1.0.204", features = ["derive"] }
simplelog = "0.12.2"
smithay-client-toolkit = "0.19.2"
time = "0.3.37"
toml = "0.8.19"
walkdir = "2.5.0"
wayland-client = "0.31.7"
