[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
name = "walrus"
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
bincode = { version = "2.0.1" }
clap = { version = "4.5.13", features = ["derive", "env"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
nix = { version = "0.29.0", features = ["fs"] }
notify = "7.0.0"
rand = "0.9.0"
serde = { version = "1.0.204", features = ["derive"] }
smithay-client-toolkit = "0.19.2"
toml = "0.8.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-journald = "0.3.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"
wayland-client = "0.31.7"
