[package]
name = "walrus-core"
version.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
smithay-client-toolkit = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
wayland-client = { workspace = true }
